Align dependencies with Artemis. Add additional dependecies for sourcesets. Remove sonarqube