@@ -8,16 +8,17 @@ buildscript {
 }
 
 plugins {
+    id "checkstyle"
     id "java"
     id "maven-publish"
     id "idea"
     id "eclipse"
     id "jacoco"
-    id "org.springframework.boot"
-    id "com.google.cloud.tools.jib"
-    id "com.gorylenko.gradle-git-properties"
+    id "org.springframework.boot" version "${spring_boot_version}"
+    id "com.google.cloud.tools.jib" version "3.1.2"
+    id "com.github.node-gradle.node" version "3.1.0"
+    id "com.diffplug.spotless" version "5.14.2"
     id "org.openapi.generator"
-    id "org.sonarqube"
     id "io.spring.nohttp"
     //jhipster-needle-gradle-plugins - JHipster will add additional gradle plugins here
 }
@@ -29,14 +30,12 @@ description = ""
 
 sourceCompatibility=16
 targetCompatibility=16
-assert System.properties["java.specification.version"] == "1.8" || "1.9" || "10" || "11" || "12" || "13" || "14" || "15" || "16"
 
 apply from: "gradle/docker.gradle"
-apply from: "gradle/sonar.gradle"
 apply from: "gradle/swagger.gradle"
 //jhipster-needle-gradle-apply-from - JHipster will add additional gradle scripts to be applied here
 
-if (project.hasProperty("prod") || project.hasProperty("gae")) {
+if (project.hasProperty("prod")) {
     apply from: "gradle/profile_prod.gradle"
 } else {
     apply from: "gradle/profile_dev.gradle"
@@ -44,19 +43,6 @@ if (project.hasProperty("prod") || project.hasProperty("gae")) {
 
 if (project.hasProperty("war")) {
     apply from: "gradle/war.gradle"
-}
-
-if (project.hasProperty("gae")) {
-    apply plugin: 'maven'
-    apply plugin: 'org.springframework.boot.experimental.thin-launcher'
-    apply plugin: 'io.spring.dependency-management'
-
-    dependencyManagement {
-        imports {
-            mavenBom "tech.jhipster:jhipster-dependencies:${jhipsterDependenciesVersion}"
-        }
-    }
-    appengineStage.dependsOn thinResolve
 }
 
 if (project.hasProperty("zipkin")) {
@@ -69,12 +55,50 @@ idea {
     }
 }
 
-sourceSets.main.java.srcDirs += ["../src/main/java/de/tum/in/www1/artemis/domain", "../src/main/java/de/tum/in/www1/artemis/repository", "../src/main/java/de/tum/in/www1/artemis/service/dto", "../src/main/java/de/tum/in/www1/artemis/web/rest/dto"]
+sourceSets {
+    external {
+        java {
+            srcDir file("../src/main/java/de/tum/in/www1/artemis/config")
+            include 'Constants.*'
+
+            srcDir file("../src/main/java/de/tum/in/www1/artemis/service")
+            include 'FilePathService.*'
+            include 'FileService.*'
+            include 'ScoreService.*'
+
+            srcDir '../src/main/java/de/tum/in/www1/artemis/web/rest/errors'
+            include 'EntityNotFoundException.*'
+            include 'StudentsAlreadyAssignedException.*'
+            include 'InternalServerErrorException.*'
+
+            srcDir file("../src/main/java/de/tum/in/www1/artemis/service/compass")
+            include 'umlmodel/UMLElement.*'
+            include 'umlmodel/Similarity.*'
+            include 'assessment/Context.*'
+
+            srcDir file("../src/main/java/de/tum/in/www1/artemis/config/audit")
+            include 'AuditEventConverter.*'
+        }
+    }
+    main {
+        java {
+            srcDir '../src/main/java/de/tum/in/www1/artemis/domain'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/exception'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/repository'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/web/rest/dto'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/service/dto'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/service/util'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/service/listeners'
+            srcDir '../src/main/java/de/tum/in/www1/artemis/validation'
+            srcDir external.java
+        }
+    }
+}
 
 defaultTasks "bootRun"
 
 springBoot {
-    mainClassName = "de.tum.in.www1.artemis.UserManagementApp"
+    mainClass = "de.tum.in.www1.artemis.UserManagementApp"
 }
 
 test {
@@ -98,33 +122,22 @@ task integrationTest(type: Test) {
     testLogging {
         events 'FAILED', 'SKIPPED'
     }
-    jvmArgs += '-Djava.security.egd=file:/dev/./urandom -Xmx256m'
 
     // uncomment if the tests reports are not generated
     // see https://github.com/jhipster/generator-jhipster/pull/2771 and https://github.com/jhipster/generator-jhipster/pull/4484
     // ignoreFailures true
-    reports.html.enabled = false
+    testLogging.showStandardStreams = true
+    reports.html.required = false
+    jvmArgs "--illegal-access=warn"
 }
 
-check.dependsOn integrationTest
 task testReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn test
 }
 
-task integrationTestReport(type: TestReport) {
-    destinationDir = file("$buildDir/reports/tests")
-    reportOn integrationTest
-}
-
-
-gitProperties {
-    failOnNoGitDirectory = false
-    keys = ["git.branch", "git.commit.id.abbrev", "git.commit.id.describe"]
-}
-
 checkstyle {
-    toolVersion "${checkstyleVersion}"
+    toolVersion "8.45"
     configFile file("checkstyle.xml")
     checkstyleTest.enabled = false
 }
@@ -151,84 +164,110 @@ repositories {
 }
 
 dependencies {
+    implementation files("../libs/jplag-3.0.0.jar")
+
     // import JHipster dependencies BOM
-    if (!project.hasProperty("gae")) {
-        implementation platform("tech.jhipster:jhipster-dependencies:${jhipsterDependenciesVersion}")
-    }
+    implementation platform("tech.jhipster:jhipster-dependencies:${jhipster_dependencies_version}")
+
+    // https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
+    implementation "org.eclipse.jgit:org.eclipse.jgit:${jgit_version}"
+    implementation "org.eclipse.jgit:org.eclipse.jgit.ssh.apache:${jgit_version}"
+    implementation "com.thoughtworks.qdox:qdox:2.0.0"
+    implementation "me.xdrop:fuzzywuzzy:1.3.1"
+    implementation "net.sourceforge.plantuml:plantuml:1.2021.9"
+    implementation "org.imsglobal:basiclti-util:1.2.0"
+    implementation "com.atlassian.bamboo:bamboo-specs:7.2.3"
+    implementation "commons-codec:commons-codec:1.15"   // needed for spring security saml2
 
     // Use ", version: jhipsterDependenciesVersion, changing: true" if you want
     // to use a SNAPSHOT release instead of a stable release
     implementation group: "tech.jhipster", name: "jhipster-framework"
     implementation "javax.annotation:javax.annotation-api"
-    implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation "org.springframework.boot:spring-boot-starter-cache:${spring_boot_version}"
     implementation "io.dropwizard.metrics:metrics-core"
-    implementation "io.micrometer:micrometer-registry-prometheus"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
-    implementation "com.fasterxml.jackson.core:jackson-annotations"
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "com.hazelcast:hazelcast"
-    implementation "com.hazelcast:hazelcast-spring"
-    implementation "javax.cache:cache-api"
+    implementation "io.micrometer:micrometer-registry-prometheus:1.7.2"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${fasterxml_version}"
+
+    implementation "com.hazelcast:hazelcast:${hazelcast_version}"
+    implementation "com.hazelcast:hazelcast-spring:${hazelcast_version}"
+    implementation "com.hazelcast:hazelcast-hibernate53:2.2.1"
+    implementation "org.hibernate:hibernate-core"
+
+    implementation "javax.cache:cache-api:1.1.1"
     implementation "org.apache.commons:commons-lang3"
-    implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindNullableVersion}"
-    implementation "javax.transaction:javax.transaction-api"
-    implementation "org.springframework.boot:spring-boot-loader-tools"
-    implementation "org.springframework.boot:spring-boot-starter-mail"
-    implementation "org.springframework.boot:spring-boot-starter-logging"
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.hibernate:hibernate-core"
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
+    implementation "javax.transaction:javax.transaction-api:1.3"
+    implementation "org.hibernate:hibernate-jcache:${hibernate_version}"
+    implementation "org.hibernate:hibernate-entitymanager:${hibernate_version}"
+    implementation "org.liquibase:liquibase-core:4.4.2"
+
+    implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-logging:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-actuator:${spring_boot_version}"
     implementation "org.apache.kafka:kafka-clients"
-    implementation "org.springframework.boot:spring-boot-starter-security"
-    implementation ("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-security:${spring_boot_version}"
+    implementation ("org.springframework.boot:spring-boot-starter-web:${spring_boot_version}") {
+        exclude module: "spring-boot-starter-undertow"
     }
-    implementation "org.springframework.boot:spring-boot-starter-undertow"
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
-    implementation "org.zalando:problem-spring-web"
+    implementation "org.springframework.boot:spring-boot-starter-websocket:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-undertow:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${spring_boot_version}"
+    implementation "org.zalando:problem-spring-web:0.26.2"
+
     implementation "org.springframework.cloud:spring-cloud-starter"
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix"
     implementation "org.springframework.retry:spring-retry"
     implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
-    implementation "org.springframework.cloud:spring-cloud-starter-config"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.3"
+    implementation "org.springframework.cloud:spring-cloud-starter-config:3.0.4"
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
-    implementation "org.springframework.security:spring-security-config"
-    implementation "org.springframework.security:spring-security-data"
-    implementation "org.springframework.security:spring-security-web"
-    implementation "io.jsonwebtoken:jjwt-api"
-    if (!project.hasProperty("gae")) {
-        runtimeOnly "io.jsonwebtoken:jjwt-impl"
-        runtimeOnly "io.jsonwebtoken:jjwt-jackson"
-    } else {
-        implementation "io.jsonwebtoken:jjwt-impl"
-        implementation "io.jsonwebtoken:jjwt-jackson"
-    }
-    implementation ("io.springfox:springfox-oas")
-    implementation ("io.springfox:springfox-swagger2")
-    implementation "io.springfox:springfox-bean-validators"
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "org.springframework.security:spring-security-test"
-    testImplementation "org.springframework.boot:spring-boot-test"
-    testImplementation "com.tngtech.archunit:archunit-junit5-api:${archunitJunit5Version}"
-    testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:${archunitJunit5Version}"
-    testImplementation "org.testcontainers:kafka"
-    developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
-    //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
-}
+    implementation "org.springframework.security:spring-security-config:${spring_security_version}"
+    implementation "org.springframework.security:spring-security-data:${spring_security_version}"
+    implementation "org.springframework.security:spring-security-web:${spring_security_version}"
 
-if (project.hasProperty("gae")) {
-    task createPom {
-        def basePath = 'build/resources/main/META-INF/maven'
-        doLast {
-            pom {
-                withXml(dependencyManagement.pomConfigurer)
-            }.writeTo("${basePath}/${project.group}/${project.name}/pom.xml")
-        }
+    implementation "io.jsonwebtoken:jjwt-api:0.11.2"
+    implementation "org.bouncycastle:bcprov-jdk15on:1.69"
+
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
+    implementation ("io.springfox:springfox-oas")
+    implementation ("io.springfox:springfox-swagger2:3.0.0") {
+        exclude module: "mapstruct"
     }
-    bootJar.dependsOn = [createPom]
+    implementation "com.ibm.icu:icu4j:69.1"
+    implementation "com.github.seancfoley:ipaddress:5.3.3"
+    implementation "org.apache.maven:maven-model:3.8.1"
+
+    implementation "org.apache.pdfbox:pdfbox:2.0.24"
+    implementation "io.springfox:springfox-bean-validators:3.0.0"
+    annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernate_version}"
+    annotationProcessor ("org.glassfish.jaxb:jaxb-runtime:${jaxb_runtime_version}") {
+        exclude group: "javax.ws.rs", module: "jsr311-api"
+    }
+
+    annotationProcessor ("org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}") {
+        exclude group: "com.vaadin.external.google", module: "android-json"
+    }
+    testImplementation "org.springframework.security:spring-security-test:${spring_security_version}"
+    testImplementation ("org.springframework.boot:spring-boot-starter-test:${spring_boot_version}") {
+        exclude module: "junit"
+        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+        exclude group: "com.vaadin.external.google", module: "android-json"
+    }
+    testImplementation "org.springframework.boot:spring-boot-test:${spring_boot_version}"
+    testImplementation "com.tngtech.archunit:archunit-junit5-api:0.20.1"
+    testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:0.20.1"
+    testImplementation "org.testcontainers:kafka"
+    developmentOnly "org.springframework.boot:spring-boot-devtools:${spring_boot_version}"
+    //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
 }
 
 task cleanResources(type: Delete) {
@@ -236,7 +275,7 @@ task cleanResources(type: Delete) {
 }
 
 wrapper {
-    gradleVersion = "7.0.2"
+    gradleVersion = "7.1.1"
 }
 
 compileJava.dependsOn processResources
